[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trishul-snmp"
version = "0.4.1"
description = "A modern SNMP runtime toolkit with optional compiled-JSON MIB enrichment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["snmp", "mib", "network", "manager"]

dependencies = []

[project.scripts]
tsnmp = "trishul_snmp.cli.main:run"

[project.optional-dependencies]
v3 = [
    "cryptography>=40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/tosumitdhaka/trishul-snmp"
Repository = "https://github.com/tosumitdhaka/trishul-snmp"
Issues = "https://github.com/tosumitdhaka/trishul-snmp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["trishul_snmp"]
omit = ["trishul_snmp/__main__.py"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == .__main__.:',
    "raise NotImplementedError",
    '^\\s*\\.\\.\\.\\s*$',
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
files = ["trishul_snmp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
